# RawDiskIO

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: DeviceFile.h  DiskGeometry.h  DiskManager.h  File.h  PartitionIO.h  PartitionInfo.h  PhysicalDiskIO.h  PhysicalDiskInfo.h  VolumeDescriptor.h  VolumeLocation.h  log.h  types.h
include/api/: DiskManager.h  IProgressListener.h
src/: DeviceFile.cpp  DiskGeometry.cpp  DiskManager.cpp  File.cpp  PartitionIO.cpp  PartitionInfo.cpp  PhysicalDiskIO.cpp  PhysicalDiskInfo.cpp
